fixed header shift bug

--- a/app-client/src/Components/Header/Header.css
+++ b/app-client/src/Components/Header/Header.css
@@ -26,6 +26,16 @@
   text-decoration: none;
 }
 
+:local(.navlink:after) {
+  content:"";
+  color:#4286f4;
+  border-bottom: 2px solid transparent;
+  padding-bottom: 5px;
+  width: 80%;
+  display: block;
+  margin: auto;
+}
+
 .selected {
   color:#4286f4;
 }
@@ -33,7 +43,7 @@
 .selected:after {
   content:"";
   color:#4286f4;
-  border-bottom: 3px solid #4286f4;
+  border-bottom: 2px solid #4286f4;
   padding-bottom: 5px;
   width: 80%;
   display: block;
